#110 Add lazy loading functionality for images.

--- a/src/app/shared/factorio-icon/factorio-icon.component.html
+++ b/src/app/shared/factorio-icon/factorio-icon.component.html
@@ -1,2 +1,3 @@
-<img src="{{icon?.src}}" alt="{{icon?.name}}" title="{{icon?.name}}" class="factorio-icon">
+<img [lazyLoad]="icon?.src"
+    alt="{{icon?.name}}" title="{{icon?.name}}" class="factorio-icon">
 <div *ngIf="icon?.text" class="factorio-icon-text">{{icon?.text}}</div>
